flux/apps/personal/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: vaultwarden
    namespace: vaultwarden
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "bitwarden.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: vaultwarden
                port: 80
